auto-test/tests/chapter_17/invalid_types/extra_credit/compound_add_void_pointer.c


void *malloc(unsigned long size);

int main(void) {
    void *buff = malloc(100);
    buff += 3;
    return 0;
}